--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "^3.4.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "less": "^4.2.0",
     "nuxt": "^3.11.2",
     "split.js": "^1.6.5",
@@ -17,6 +19,9 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "dotenv": "^16.4.5"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
+    "postcss": "^8.4.38"
   }
 }
