--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@nuxtjs/color-mode": "^3.4.0",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@pinia/nuxt": "^0.5.1",
     "less": "^4.2.0",
     "nuxt": "^3.11.2",
+    "pinia": "^2.1.7",
     "split.js": "^1.6.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
