--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@nuxtjs/color-mode": "^3.4.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@pinia/nuxt": "^0.5.1",
+    "crypto-js": "^4.2.0",
     "less": "^4.2.0",
+    "moment": "^2.30.1",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "split.js": "^1.6.5",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.9",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/crypto-js": "^4.2.2",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "postcss": "^8.4.38"
