--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "moment": "^2.30.1",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
+    "qiankun": "^2.10.16",
+    "single-spa": "^6.0.1",
+    "single-spa-vue": "^3.0.0",
     "split.js": "^1.6.5",
+    "systemjs": "^6.15.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
