--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "less": "^4.2.0",
     "moment": "^2.30.1",
     "nuxt": "^3.11.2",
+    "nuxt-proxy": "^0.4.1",
     "pinia": "^2.1.7",
     "qiankun": "^2.10.16",
     "single-spa": "^6.0.1",
