--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "single-spa-vue": "^3.0.0",
     "split.js": "^1.6.5",
     "systemjs": "^6.15.1",
+    "vconsole": "^3.15.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
