--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "systemjs": "^6.15.1",
     "vconsole": "^3.15.1",
     "vue": "^3.4.21",
+    "vue-cropper": "^1.1.4",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
