--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vite-pwa/nuxt": "^1.0.1",
     "crypto-js": "^4.2.0",
     "echarts": "^5.5.0",
+    "i18n-iso-countries": "^7.14.0",
     "less": "^4.2.0",
     "moment": "^2.30.1",
     "nuxt": "^3.11.2",
@@ -31,6 +32,7 @@
     "systemjs": "^6.15.1",
     "vconsole": "^3.15.1",
     "vue": "^3.4.21",
+    "vue-country-flag-next": "^2.3.2",
     "vue-cropper": "^1.1.4",
     "vue-router": "^4.3.0"
   },
