开始新账号

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 BASE_URL='http://127.0.0.1'
 BASE_API_URL='http://127.0.0.1:3002'
 CAPTCHA_APP_ID='2086601747'
+reCAPTCHA_KEY='6Lehf10rAAAAALFkQMJrQiB-i9wk55I38cy21dP0'
