--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 BASE_URL='https://www.deepkline.com'
 BASE_API_URL='https://api.deepkline.com'
+BASE_WS_URL='http://ws.deepkline.com'
 CAPTCHA_APP_ID='2086601747'
 reCAPTCHA_KEY='6Lehf10rAAAAALFkQMJrQiB-i9wk55I38cy21dP0'
