--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@vite-pwa/nuxt": "^1.0.1",
     "crypto-js": "^4.2.0",
+    "decimal.js": "^10.6.0",
     "echarts": "^5.5.0",
     "i18n-iso-countries": "^7.14.0",
     "less": "^4.2.0",
