--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
 {
-  "name": "nuxt-app",
-  "version": "1.0.8",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "start": "nuxt start",
-    "build android": "nuxt generate && npx cap sync && npx cap open android"
-  },
-  "dependencies": {
-    "@capacitor/android": "^7.4.3",
-    "@capacitor/cli": "^7.4.3",
-    "@capacitor/core": "^7.4.3",
-    "@capacitor/ios": "^7.4.3",
-    "@capacitor/splash-screen": "^7.0.2",
-    "@capacitor/status-bar": "^7.0.2",
-    "@element-plus/icons-vue": "^2.3.1",
-    "@nuxt/kit": "^3.11.2",
-    "@nuxtjs/color-mode": "^3.4.0",
-    "@nuxtjs/google-fonts": "^3.2.0",
-    "@pinia/nuxt": "^0.5.1",
-    "@vite-pwa/nuxt": "^1.0.1",
-    "crypto-js": "^4.2.0",
-    "decimal.js": "^10.6.0",
-    "echarts": "^5.5.0",
-    "i18n-iso-countries": "^7.14.0",
-    "less": "^4.2.0",
-    "moment": "^2.30.1",
-    "nuxt": "^3.11.2",
-    "nuxt-proxy": "^0.4.1",
-    "nvm": "^0.0.4",
-    "pinia": "^2.1.7",
-    "single-spa": "^6.0.1",
-    "single-spa-vue": "^3.0.0",
-    "socket.io-client": "^4.8.1",
-    "split.js": "^1.6.5",
-    "systemjs": "^6.15.1",
-    "vconsole": "^3.15.1",
-    "vue": "^3.4.21",
-    "vue-country-flag-next": "^2.3.2",
-    "vue-cropper": "^1.1.4",
-    "vue-router": "^4.3.0"
-  },
-  "devDependencies": {
-    "@capacitor/assets": "^3.0.5",
-    "@element-plus/nuxt": "^1.0.9",
-    "@nuxtjs/tailwindcss": "^6.12.0",
-    "@types/crypto-js": "^4.2.2",
-    "autoprefixer": "^10.4.19",
-    "dotenv": "^16.4.5",
-    "postcss": "^8.4.38",
-    "postcss-px-to-viewport": "^1.1.1",
-    "typescript": "^5.8.3"
-  }
+	"name": "deepkline-web",
+	"version": "1.0.8",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"generate:win": "cross-env MODE=win nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"start": "nuxt start",
+		"build-android": "cross-env MODE=android nuxt generate && npx cap sync android && npx cap open android",
+		"build-ios": "cross-env MODE=ios nuxt generate && npx cap sync ios && npx cap open ios"
+	},
+	"dependencies": {
+		"@capacitor/android": "^7.4.3",
+		"@capacitor/cli": "^7.4.3",
+		"@capacitor/core": "^7.4.3",
+		"@capacitor/ios": "^7.4.3",
+		"@capacitor/splash-screen": "^7.0.2",
+		"@capacitor/status-bar": "^7.0.2",
+		"@element-plus/icons-vue": "^2.3.1",
+		"@nuxt/kit": "^3.11.2",
+		"@nuxtjs/color-mode": "^3.4.0",
+		"@pinia/nuxt": "^0.5.1",
+		"@vite-pwa/nuxt": "^1.0.1",
+		"crypto-js": "^4.2.0",
+		"decimal.js": "^10.6.0",
+		"echarts": "^5.5.0",
+		"i18n-iso-countries": "^7.14.0",
+		"less": "^4.2.0",
+		"moment": "^2.30.1",
+		"nuxt": "^3.11.2",
+		"nuxt-proxy": "^0.4.1",
+		"nvm": "^0.0.4",
+		"pinia": "^2.1.7",
+		"single-spa": "^6.0.1",
+		"single-spa-vue": "^3.0.0",
+		"socket.io-client": "^4.8.1",
+		"split.js": "^1.6.5",
+		"systemjs": "^6.15.1",
+		"vconsole": "^3.15.1",
+		"vue": "^3.4.21",
+		"vue-country-flag-next": "^2.3.2",
+		"vue-cropper": "^1.1.4",
+		"vue-router": "^4.3.0"
+	},
+	"devDependencies": {
+		"@capacitor/assets": "^3.0.5",
+		"@element-plus/nuxt": "^1.0.9",
+		"@nuxtjs/tailwindcss": "^6.12.0",
+		"@types/crypto-js": "^4.2.2",
+		"autoprefixer": "^10.4.19",
+		"cross-env": "^10.0.0",
+		"dotenv": "^16.4.5",
+		"electron": "^37.4.0",
+		"electron-builder": "^26.0.12",
+		"postcss": "^8.4.38",
+		"postcss-px-to-viewport": "^1.1.1",
+		"typescript": "^5.8.3"
+	}
 }
