--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"scripts": {
 		"build": "nuxt build",
 		"dev": "nuxt dev",
+		"dev:win": "cross-env MODE=win nuxt dev",
+		"dev:mac": "cross-env MODE=win nuxt dev",
 		"generate": "nuxt generate",
 		"generate:win": "cross-env MODE=win nuxt generate",
 		"generate:mac": "cross-env MODE=mac nuxt generate",
@@ -16,6 +18,7 @@
 		"build:ios": "cross-env MODE=ios nuxt generate && npx cap sync ios && npx cap open ios"
 	},
 	"dependencies": {
+		"@capacitor-community/safe-area": "^7.0.0-alpha.1",
 		"@capacitor/android": "^7.4.3",
 		"@capacitor/cli": "^7.4.3",
 		"@capacitor/core": "^7.4.3",
