优化搜索卡片

--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
 		"@capacitor/splash-screen": "^7.0.2",
 		"@capacitor/status-bar": "^7.0.2",
 		"@element-plus/icons-vue": "^2.3.1",
+		"@fingerprintjs/fingerprintjs": "^4.6.2",
 		"@nuxt/kit": "^3.11.2",
 		"@nuxtjs/color-mode": "^3.4.0",
 		"@nuxtjs/i18n": "^9.5.6",
 		"@pinia/nuxt": "^0.5.1",
 		"@vite-pwa/nuxt": "^1.0.1",
+		"aegis-web-sdk": "^1.41.3",
 		"crypto-js": "^4.2.0",
 		"decimal.js": "^10.6.0",
 		"echarts": "^5.5.0",
