完善个人中心

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ BASE_API_URL='http://192.168.0.103:3002'
 BASE_WS_URL='http://192.168.0.103:3003'
 CAPTCHA_APP_ID='2086601747'
 reCAPTCHA_KEY='6Lehf10rAAAAALFkQMJrQiB-i9wk55I38cy21dP0'
+AUTH_GOOGLE_APPID='530822285505-um008tf5m5pbqj78h7rm3vg7skquro3p.apps.googleusercontent.com'
