--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
 		"@element-plus/nuxt": "^1.0.9",
 		"@nuxtjs/tailwindcss": "^6.12.0",
 		"@types/crypto-js": "^4.2.2",
+		"@types/gapi": "^0.0.47",
+		"@types/gapi.auth2": "^0.0.61",
 		"autoprefixer": "^10.4.19",
 		"cross-env": "^10.0.0",
 		"dotenv": "^16.4.5",
